# Lazarus

./: Cargo.toml  README.md  rust-toolchain
.github/workflows/: ci.yml  mdbook.yml
algebra/: Cargo.toml
algebra/src/: lib.rs  polynomial_ring.rs  rq_matrix.rs  utils.rs  zq.rs
docs/: book.toml
docs/src/: SUMMARY.md  dev_notes.md  getting_started.md
labrador/: Cargo.toml
labrador/src/: algebra.rs  guassian.rs  lib.rs  prover.rs  setup.rs  st.rs  statement.rs  tr.rs  transcript.rs  utils.rs  verifier.rs
labrador/src/core/: aggregation.rs  conjugation_automorphism.rs  constraint.rs  decompose.rs  gaussian_generator.rs  mod.rs  outer_commitment.rs
labrador/src/example/: main.rs
labrador/src/gadgets/: aggregation.rs  decompose.rs  gaussian_generator.rs  mod.rs  norm.rs
