[package]
name = "labrador"
version = { workspace = true }
edition = { workspace = true }

[[example]]
name = "main"
required_features = ["test"]
path = "src/example/main.rs"

[dependencies]
rand = { workspace = true }
rayon = {workspace = true, optional = true}

profiler_macro = { workspace = true }
ark-std = { workspace = true, optional = true }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["prepush-hook", "run-cargo-fmt", "run-cargo-check"] }


[features]
default = ["parallel"]
parallel = ["rayon"]
profiler = ["ark-std/print-trace"]